--- a/apply.html
+++ b/apply.html
@@ -1,107 +1,126 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HY-CoRA - 모집/가입 안내</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>HY-CoRA - 모집/가입 안내</title>
+        <link rel="stylesheet" href="style.css" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <header class="header">
+            <div class="container header-container">
+                <h1 class="logo"><a href="index.html">HY-CoRA</a></h1>
+                <nav class="nav">
+                    <ul>
+                        <li><a href="about.html">소개</a></li>
+                        <li><a href="activities.html">활동 내용</a></li>
+                        <li><a href="apply.html">모집 안내/가입</a></li>
+                        <li><a href="announcement.html">공지사항</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <header class="header">
-        <div class="container header-container">
-            <h1 class="logo"><a href="index.html">HY-CoRA</a></h1>
-            <nav class="nav">
-                <ul>
-                    <li><a href="about.html">소개</a></li>
-                    <li><a href="activities.html">활동 내용</a></li>
-                    <li><a href="apply.html">모집 안내/가입</a></li>
-                    <li><a href="announcement.html">공지사항</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+        <main>
+            <div class="about-header">
+                <h2 class="about-title">모집 안내</h2>
+                <p class="about-subtitle">
+                    HY-CoRA 동아리에서 함께 성장할 새로운 멤버를 모집합니다.
+                </p>
+            </div>
 
-    <main>
-
-        <div class="about-header">
-            <h2 class="about-title">모집 안내</h2>
-            <p class="about-subtitle">
-                HY-CoRA 동아리에서 함께 성장할 새로운 멤버를 모집합니다.
-            </p>
-        </div>
-
-
-        <section class="recruitment-section">
-            <div class="container">
-                <div class="recruitment-nav">
-                    <button class="nav-button active">모집일정</button>
-                    <button class="nav-button">지원자격</button>
-                    <button class="nav-button">FAQ</button>
-                    <button class="nav-button">문의</button>
-                </div>
-                <h1>모집 일정</h1>
-                <div class="recruitment-content">
-                    <div class="recruitment-card">
-                        <div class="recruitment-line"></div>
-                        <div class="recruitment-box">2000.00.00 ~ 2000.00.00: 사전 안내 공개</div>
-                        <div class="recruitment-box">2000.00.00 ~ 2000.00.00: 사전 안내 공개</div>
-                        <div class="recruitment-box">2000.00.00 ~ 2000.00.00: 사전 안내 공개</div>
-                        <div class="recruitment-box">2000.00.00 ~ 2000.00.00: 사전 안내 공개</div>
+            <section class="recruitment-section">
+                <div class="container">
+                    <div class="recruitment-nav">
+                        <button class="nav-button active">모집일정</button>
+                        <button class="nav-button">지원자격</button>
+                        <button class="nav-button">FAQ</button>
+                        <button class="nav-button">문의</button>
+                    </div>
+                    <h1>모집 일정</h1>
+                    <div class="recruitment-content">
+                        <div class="recruitment-card">
+                            <div class="recruitment-line"></div>
+                            <div class="recruitment-box">
+                                2000.00.00 ~ 2000.00.00: 사전 안내 공개
+                            </div>
+                            <div class="recruitment-box">
+                                2000.00.00 ~ 2000.00.00: 사전 안내 공개
+                            </div>
+                            <div class="recruitment-box">
+                                2000.00.00 ~ 2000.00.00: 사전 안내 공개
+                            </div>
+                            <div class="recruitment-box">
+                                2000.00.00 ~ 2000.00.00: 사전 안내 공개
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        <div class="two-cards">
-            <div class="outer-card">
-                <div class="card-label">지원 방법</div>
-                <div class="inner-card">
-                    <h2>제출 & 확인</h2>
-                    <p>지원 기간에 꼭 제출 -> 안내 메일/문자 확인</p>
-                </div>
-            </div>
-                <div class="outer-card">
-                <div class="card-label">바로 가기</div>
-                    <div class="inner-card">
-                    <h2>지원 자격 / FAQ / 문의</h2>
-                    <p><b>지원자격</b> · <b>FAQ</b> · <b>문의</b> 페이지에서 자세히 확인하세요.</p>
-                </div>
-            </div>
-        </div>
-            <div><h2> 지원자격</h2></div>
-                <div class="apply-card">
-                    <p>학년·전공 무관. 배우고 협업할 의지가 있다면 누구나 지원할 수 있습니다.</p>
-                </div>
-            <div><h2>기본 요건</h2></div>
                 <div class="two-cards">
-            <div class="outer-card">
-                <div class="card-label card-label-1">의지</div>
-                <div class="inner-card">
-                    <h2>학습 의지</h2>
-                    <p>기초부터 차근히 배우고 팀으로 협업할 마음</p>
+                    <div class="outer-card">
+                        <div class="card-label">지원 방법</div>
+                        <div class="inner-card">
+                            <h2>제출 & 확인</h2>
+                            <p>지원 기간에 꼭 제출 -> 안내 메일/문자 확인</p>
+                        </div>
+                    </div>
+                    <div class="outer-card">
+                        <div class="card-label">바로 가기</div>
+                        <div class="inner-card">
+                            <h2>지원 자격 / FAQ / 문의</h2>
+                            <p>
+                                <b>지원자격</b> · <b>FAQ</b> ·
+                                <b>문의</b> 페이지에서 자세히 확인하세요.
+                            </p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-                <div class="outer-card">
-                <div class="card-label card-label-2">참여</div>
-                    <div class="inner-card">
-                    <h2>스터디 참여</h2>
-                    <p>개인 일정에 맞춰 참여 가능한 트랙을 자유롭게 선택 신청하세요.</p>
+                <div><h2>지원자격</h2></div>
+                <div class="apply-card">
+                    <p>
+                        학년·전공 무관. 배우고 협업할 의지가 있다면 누구나
+                        지원할 수 있습니다.
+                    </p>
                 </div>
-            </div>
-        </div>
-            <div><h2>지원 절차</h2></div>
+                <div><h2>기본 요건</h2></div>
+                <div class="two-cards">
+                    <div class="outer-card">
+                        <div class="card-label card-label-1">의지</div>
+                        <div class="inner-card">
+                            <h2>학습 의지</h2>
+                            <p>기초부터 차근히 배우고 팀으로 협업할 마음</p>
+                        </div>
+                    </div>
+                    <div class="outer-card">
+                        <div class="card-label card-label-2">참여</div>
+                        <div class="inner-card">
+                            <h2>스터디 참여</h2>
+                            <p>
+                                개인 일정에 맞춰 참여 가능한 트랙을 자유롭게
+                                선택 신청하세요.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div><h2>지원 절차</h2></div>
                 <div class="container">
                     <div class="apply-box">
                         <div class="apply-row">
                             <div class="apply-circle"><h2>1</h2></div>
-                                <div class="apply-order">
+                            <div class="apply-order">
                                 <div class="apply-text">
                                     <h2>지원서 제출</h2>
                                     <p>모집 기간에 폼 제출</p>
                                 </div>
-                                <button class="apply-button">지원 폼 열기</button>
-                                </div>
-                                </div>
+                                <button class="apply-button">
+                                    지원 폼 열기
+                                </button>
+                            </div>
+                        </div>
                         <div class="apply-row">
                             <div class="apply-circle"><h2>2</h2></div>
                             <div class="apply-order">
@@ -113,31 +132,68 @@
                         </div>
                     </div>
                 </div>
-                    <div class="two-cards">
-                        <div class="outer-card">
-                            <div class="card-label">바로가기</div>
-                            <div class="inner-card">
+                <div class="two-cards">
+                    <div class="outer-card">
+                        <div class="card-label">바로가기</div>
+                        <div class="inner-card">
                             <h2>모집 일정 확인</h2>
-                            <p><b>모집 일정</b>에서 학기별 타임라인을 확인하세요.</p>
-                            </div>
+                            <p>
+                                <b>모집 일정</b>에서 학기별 타임라인을
+                                확인하세요.
+                            </p>
                         </div>
+                    </div>
                     <div class="outer-card">
                         <div class="card-label">문의</div>
-                            <div class="inner-card">
+                        <div class="inner-card">
                             <h2>질문이 있다면</h2>
                             <p><b>문의</b>로 연락주세요.</p>
                         </div>
                     </div>
                 </div>
-        </section>
-    </main>
+            </section>
+        </main>
 
-    <footer class="footer">
-        <div class="container footer-content">
-            <p>경기도 안산시 상록구 한양대학로 55 복지관 425호 (동방 주소)<br>hycora369@gmail.com</p>
-            <p>&nbsp;&nbsp;&nbsp;회장: 010-3552-2044<br>부회장: 010-3410-4697</p>
-        </div>
-    </footer>
-    <script src="js/apply.js"></script>
-</body>
+        <footer class="footer">
+            <div class="container footer-content">
+                <!-- Top: Copyright -->
+                <div class="footer-top">
+                    <p>Copyright 2025. HY-CoRA All rights reserved.</p>
+                    <a
+                        href="https://www.instagram.com/hycora_hanyang/"
+                        target="_blank"
+                        rel="noopener"
+                        class="social-icon"
+                    >
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
+
+                <!-- Divider -->
+                <div class="footer-divider" aria-hidden="true"></div>
+
+                <!-- Bottom: 좌측 주소/메일 / 우측 회장·부회장 -->
+                <div class="footer-bottom">
+                    <p class="footer-detail">
+                        <strong>Made by Hy-CoRA</strong> <br />
+                        2025 ver. Create by <strong> 팀</strong> 이한, 최관우,
+                        김현준, 박아진, 박강호, 최지민 <br /><br />
+                        경기도 안산시 상록구 한양대학로 55 복지관 425호<br />
+                        hycora369@gmail.com
+                    </p>
+                    <div class="contacts">
+                        <div class="contact-block">
+                            <h3>회장</h3>
+                            <p>이한 010-3552-2044</p>
+                        </div>
+                        <div class="contact-block">
+                            <h3>부회장</h3>
+                            <p>최관우 010-3410-4697</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <script src="js/apply.js"></script>
+    </body>
 </html>
