--- a/apply.html
+++ b/apply.html
@@ -52,7 +52,7 @@
                     </div>
                 </div>
             </div>
-        <div class="two-cards">
+        <div class="two-cards two-cards-1">
             <div class="outer-card">
                 <div class="card-label">지원 방법</div>
                 <div class="inner-card">
@@ -73,7 +73,7 @@
                     <p>학년·전공 무관. 배우고 협업할 의지가 있다면 누구나 지원할 수 있습니다.</p>
                 </div>
             <div><h2>기본 요건</h2></div>
-                <div class="two-cards">
+                <div class="two-cards two-cards-1">
             <div class="outer-card">
                 <div class="card-label card-label-1">의지</div>
                 <div class="inner-card">
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                 </div>
-                    <div class="two-cards">
+                    <div class="two-cards two-cards-1">
                         <div class="outer-card">
                             <div class="card-label">바로가기</div>
                             <div class="inner-card">
@@ -126,6 +126,51 @@
                             <div class="inner-card">
                             <h2>질문이 있다면</h2>
                             <p><b>문의</b>로 연락주세요.</p>
+                        </div>
+                    </div>
+                </div>
+                <h2>FAQ</h2>
+                <div class="FAQ-box">
+                    <div class="FAQ-card"><b>▼ 전공/학년 제한이 있나요?</b>
+                        <p>없습니다. 배우고 협업하려는 마음이 있으면 누구나 환영합니다.</p></div>
+                    <div class="FAQ-card"><b>▼ 신입이라 실력이 많이 부족한데 지원해도 되나요?</b>
+                        <p>네. 기본 스터디 트랙부터 시작하며, 코드리뷰와 페어로 빠르게 성장할 수 있게 도와드립니다.</p></div>
+                    <div class="FAQ-card"><b>▼ 회비가 있나요?</b>
+                        <p>운영비와 행사비 일부를 위해 학기별 소정의 회비가 있을 수 있으며, OT에서 투명하게 안내합니다.</p></div>
+                    <div class="FAQ-card"><b>▼ 전공/학년 제한이 있나요?</b>
+                        <p>없습니다. 배우고 협업하려는 마음이 있으면 누구나 환영합니다.</p></div>
+                </div>
+                <h2>문의</h2>
+                <div class="two-cards">
+                    <div class="outer-card">
+                        <div class="card-label">이메일</div>
+                        <div class="inner-card">
+                        <h2>공식 메일</h2>
+                        <p>hycora369@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="outer-card">
+                        <div class="card-label">연락처</div>
+                        <div class="inner-card">
+                        <h2>전화번호</h2>
+                        <p>회장 이 한: 010-3552-2044
+                        <br>부회장 최관우: 010-3410-4697</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="two-cards">
+                    <div class="outer-card">
+                        <div class="card-label">방문</div>
+                        <div class="inner-card">
+                        <h2>오프라인</h2>
+                        <p>경기도 안산시 상록구 한양대학로 55 복지관 425호</p>
+                        </div>
+                    </div>
+                    <div class="outer-card">
+                        <div class="card-label">가이드</div>
+                        <div class="inner-card">
+                        <h2>답변을 빨리 받는 팁</h2>
+                        <p>재촉은 삼가고, 알고 싶은 핵심과 원하시는 답을 한 문장으로 간단히 남겨 주시면 더 빠르게 답변드릴 수 있습니다.</p>
                         </div>
                     </div>
                 </div>
