--- a/apply.html
+++ b/apply.html
@@ -24,24 +24,22 @@
     </header>
 
     <main>
-
         <div class="about-header">
             <h2 class="about-title">모집 안내</h2>
             <p class="about-subtitle">
                 HY-CoRA 동아리에서 함께 성장할 새로운 멤버를 모집합니다.
             </p>
         </div>
-
-
         <section class="recruitment-section">
             <div class="container">
-                <div class="recruitment-nav">
-                    <button class="nav-button active">모집일정</button>
-                    <button class="nav-button">지원자격</button>
-                    <button class="nav-button">FAQ</button>
-                    <button class="nav-button">문의</button>
+                <div class="about-nav">
+                    <button class="nav-button active"  data-target="greeting">모집일정</button>
+                    <button class="nav-button"  data-target="Eligibility">지원자격</button>
+                    <button class="nav-button"  data-target="Process">지원절차</button>
+                    <button class="nav-button"  data-target="faq">FAQ</button>
+                    <button class="nav-button"  data-target="contact">문의</button>
                 </div>
-                <h1>모집 일정</h1>
+                <h2 id>모집 일정</h2>
                 <div class="recruitment-content">
                     <div class="recruitment-card">
                         <div class="recruitment-line"></div>
@@ -68,7 +66,7 @@
                 </div>
             </div>
         </div>
-            <div><h2> 지원자격</h2></div>
+            <h2 id="Eligibility"> 지원자격</h2>
                 <div class="apply-card">
                     <p>학년·전공 무관. 배우고 협업할 의지가 있다면 누구나 지원할 수 있습니다.</p>
                 </div>
@@ -89,7 +87,7 @@
                 </div>
             </div>
         </div>
-            <div><h2>지원 절차</h2></div>
+            <h2 id="Process">지원 절차</h2>
                 <div class="container">
                     <div class="apply-box">
                         <div class="apply-row">
@@ -129,7 +127,7 @@
                         </div>
                     </div>
                 </div>
-                <h2>FAQ</h2>
+                <h2 id="faq">FAQ</h2>
                 <div class="FAQ-box">
                     <div class="FAQ-card"><b>▼ 전공/학년 제한이 있나요?</b>
                         <p>없습니다. 배우고 협업하려는 마음이 있으면 누구나 환영합니다.</p></div>
@@ -140,7 +138,7 @@
                     <div class="FAQ-card"><b>▼ 전공/학년 제한이 있나요?</b>
                         <p>없습니다. 배우고 협업하려는 마음이 있으면 누구나 환영합니다.</p></div>
                 </div>
-                <h2>문의</h2>
+                <h2 id="contact">문의</h2>
                 <div class="two-cards">
                     <div class="outer-card">
                         <div class="card-label">이메일</div>
