--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
                             가능성을 펼쳐보세요.
                         </p>
                     </div>
-                    <div class="intro-image-placeholder">
-                        <span>사진 1</span>
-                    </div>
+                    <div class="intro-image-placeholder"></div>
                 </div>
             </section>
 
