--- a/apply.html
+++ b/apply.html
@@ -33,13 +33,13 @@
         <section class="recruitment-section">
             <div class="container">
                 <div class="about-nav">
-                    <button class="nav-button active"  data-target="greeting">모집일정</button>
+                    <button class="nav-button active"  data-target="Schedule">모집일정</button>
                     <button class="nav-button"  data-target="Eligibility">지원자격</button>
                     <button class="nav-button"  data-target="Process">지원절차</button>
                     <button class="nav-button"  data-target="faq">FAQ</button>
                     <button class="nav-button"  data-target="contact">문의</button>
                 </div>
-                <h2 id>모집 일정</h2>
+                <h2 id="Schedule">모집 일정</h2>
                 <div class="recruitment-content">
                     <div class="recruitment-card">
                         <div class="recruitment-line"></div>
