Update on Design-06

--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
                                 <div class="avatar"></div>
                                 <div class="card-body">
                                     <h3 class="name">최관우</h3>
-                                    <div class="role">부회장</div>
+                                    <div class="role">부회장 · Vice Lead</div>
                                     <p class="desc">동아리 총괄, 연간 로드맵/대외 커뮤니케이션.</p>
                                     <div class="btn-row">
                                         <button class="pill">운영</button>
@@ -134,7 +134,7 @@
                                 <div class="avatar"></div>
                                 <div class="card-body">
                                     <h3 class="name">최재호</h3>
-                                    <div class="role">총무</div>
+                                    <div class="role">총무 · Finance Management</div>
                                     <p class="desc">동아리 총괄, 연간 로드맵/대외 커뮤니케이션.</p>
                                     <div class="btn-row">
                                         <button class="pill">운영</button>
@@ -147,7 +147,7 @@
                                 <div class="avatar"></div>
                                 <div class="card-body">
                                     <h3 class="name">김현준</h3>
-                                    <div class="role">교육</div>
+                                    <div class="role">교육 · Education</div>
                                     <p class="desc">동아리 총괄, 연간 로드맵/대외 커뮤니케이션.</p>
                                     <div class="btn-row">
                                         <button class="pill">운영</button>
@@ -160,7 +160,7 @@
                                 <div class="avatar"></div>
                                 <div class="card-body">
                                     <h3 class="name">박아진</h3>
-                                    <div class="role">홍보</div>
+                                    <div class="role">홍보 · Public Relations</div>
                                     <p class="desc">동아리 총괄, 연간 로드맵/대외 커뮤니케이션.</p>
                                     <div class="btn-row">
                                         <button class="pill">운영</button>
@@ -173,7 +173,7 @@
                                 <div class="avatar"></div>
                                 <div class="card-body">
                                     <h3 class="name">박강호</h3>
-                                    <div class="role">집행</div>
+                                    <div class="role">집행 · Execution</div>
                                     <p class="desc">동아리 총괄, 연간 로드맵/대외 커뮤니케이션.</p>
                                     <div class="btn-row">
                                         <button class="pill">운영</button>
@@ -186,7 +186,7 @@
                                 <div class="avatar"></div>
                                 <div class="card-body">
                                     <h3 class="name">최지민</h3>
-                                    <div class="role">디자인</div>
+                                    <div class="role">디자인 · Design</div>
                                     <p class="desc">동아리 총괄, 연간 로드맵/대외 커뮤니케이션.</p>
                                     <div class="btn-row">
                                         <button class="pill">운영</button>
@@ -234,51 +234,35 @@
                                     <p3 class="learning-desc">파이썬, C언어, 웹 등 다양한 주제로 주 1회 세션을 진행합니다.<br/>실습과 코드리뷰를 통해 기초부터 심화까지 함께 성장합니다.</p3>
                                 </div>                                
                             </article>
-
                             <!-- 더 추가하면 자동으로 다음 행으로 3개씩 배치됨 -->
                         </div>
                     </section>
-
-
-
-
                     <!-- 지표 -->
                     <h3 id="indicator">지표</h3>
                     <section class="indicator-wrap">
+                        <div class="indicator-grid">
+                            <article class="indicator-card">
+                                <h4 class="indicator-title">동아리 인원</h4>
+                                <p class="indicator-desc">xx명</p>
+                            </article>
 
-  <div class="indicator-grid">
-    <article class="indicator-card">
-      <h4 class="indicator-title">동아리 인원</h4>
-      <p class="indicator-desc">xx명</p>
-    </article>
+                            <article class="indicator-card">
+                                <h4 class="indicator-title">공개 자료</h4>
+                                <p class="indicator-desc"><strong>xx+</strong> 문서 / 슬라이드 / 리포</p>
+                            </article>
 
-    <article class="indicator-card">
-      <h4 class="indicator-title">공개 자료</h4>
-      <p class="indicator-desc"><strong>xx+</strong> 문서 / 슬라이드 / 리포</p>
-    </article>
+                            <article class="indicator-card">
+                                <h4 class="indicator-title">완성 프로젝트</h4>
+                                <p class="indicator-desc"><strong>xx건</strong> (올해 xx건)</p>
+                            </article>
 
-    <article class="indicator-card">
-      <h4 class="indicator-title">완성 프로젝트</h4>
-      <p class="indicator-desc"><strong>xx건</strong> (올해 xx건)</p>
-    </article>
-
-    <article class="indicator-card">
-      <h4 class="indicator-title">기타 지표</h4>
-      <p class="indicator-desc">추가 내용</p>
-    </article>
-  </div>
-</section>
-
-
-
-
-
-
-
-
+                            <article class="indicator-card">
+                                <h4 class="indicator-title">기타 지표</h4>
+                                <p class="indicator-desc">추가 내용</p>
+                            </article>
+                        </div>
+                    </section>
                 </div>
-                
-
             </div>
         </section>
     </main>
