--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -66,39 +65,39 @@
                             <div class="icon-container green">
                                 <span class="icon"> 동아리 개요</span> 
                             </div>
-                            <div class="card">
-                                <div class="icon-container blue">
-                                    <span class="icon"> 활동 분야</span>
-                                </div>
-                                <p2
-                                    >웹·앱 개발, 알고리즘, UI/UX 등 다양한
-                                    주제로 정기 스터디와 실습을 진행합니다.
-                                    <br />
-                                    학기 중에는 주간 세션, 방학에는 집중
-                                    프로젝트로 역량을 확장합니다.</p2
-                                >
-                            </div>
-                            <div class="card">
-                                <div class="icon-container yellow">
-                                    <span class="icon"> 운영진 </span>
-                                </div>
-                                <p2
-                                    >회장, 부회장, 교육·프로젝트·운영 파트
-                                    리드로 구성되어 효율적인 활동을 지원합니다.
-                                    <br />
-                                    각 파트가 역할을 나누어 원활한 진행과
-                                    체계적인 운영을 유지합니다.</p2
-                                >
-                            </div>
+                            <p2>Hy-CoRA는 컴퓨터 기술을 배우고 협업 프로젝트를 통해 함께 성장하는 한양대학교 ERICA의 학술 동아리입니다. <br>
+                            다양한 전공의 학생들이 모여 실무 중심의 경험과 지식을 쌓고 있습니다.</p2>
                         </div>
-
+                        <div class="card">
+                            <div class="icon-container blue">
+                                <span class="icon"> 활동 분야</span>
+                            </div>
+                            <p2>웹·앱 개발, 알고리즘, UI/UX 등 다양한 주제로 정기 스터디와 실습을 진행합니다. <br>
+                                학기 중에는 주간 세션, 방학에는 집중 프로젝트로 역량을 확장합니다.</p2>
+                        </div>
+                        <div class="card">
+                            <div class="icon-container yellow">
+                                <span class="icon"> 운영진 </span>
+                            </div>
+                            <p2>회장, 부회장, 교육·프로젝트·운영 파트 리드로 구성되어 효율적인 활동을 지원합니다. <br>
+                                각 파트가 역할을 나누어 원활한 진행과 체계적인 운영을 유지합니다.</p2>
+                        </div>
                     </div>
+
+                    
                     <!-- 연혁 -->
                     <div class = "intro-history-content"> 
                         <div class = "intro-history-card"> 
                             <div class="icon-container pink">
                                 <span class="icon"> 주요 연혁 </span>
                             </div>
+                            <div class = "intro-history-line"></div>
+                            <div class = "intro-history-box">20xx.xx.xx: 외부 협력 프로젝트 기여 시작</div>
+                            <div class = "intro-history-box">20xx.xx.xx: 동아리 웹 리뉴얼, 내부 아카이브 구축</div>
+                            <div class = "intro-history-box">20xx.xx.xx:  회사 견학</div>
+                            <div class = "intro-history-box">20xx.xx.xx: 동아리 아카이브 플랫폼 구축</div>
+                            <div class = "intro-history-box">20xx.xx.xx:웹·앱 개발 스터디 커리큘럼 정식 도입</div>
+                            <div class = "intro-history-box">20xx.xx.xx: 동아리 설립</div>
                         </div>
                     </div>
                     <!-- 임원진 -->
