Update on Design-06

--- a/apply.html
+++ b/apply.html
@@ -190,6 +190,20 @@
         </section>
     </main>
 
+    <footer class="footer">
+            <div class="container footer-content">
+                <!-- Top: Copyright -->
+                <div class="footer-top">
+                    <p>Copyright 2025. HY-CoRA All rights reserved.</p>
+                    <a
+                        href="https://www.instagram.com/hycora_hanyang/"
+                        target="_blank"
+                        rel="noopener"
+                        class="social-icon"
+                    >
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
 
                 <!-- Divider -->
                 <div class="footer-divider" aria-hidden="true"></div>
@@ -216,6 +230,7 @@
                 </div>
             </div>
         </footer>
+
         <script src="js/apply.js"></script>
     </body>
 </html>
