--- a/about.html
+++ b/about.html
@@ -290,9 +290,9 @@
                 <!-- Bottom: 좌측 주소/메일 / 우측 회장·부회장 -->
                 <div class="footer-bottom">
                     <p class="footer-detail">
-                        <strong>Made by Hy-CoRA</strong> <br />
+                        <strong>Made by HY-CoRA</strong> <br />
                         2025 ver. Create by <strong> 팀</strong> 이한, 최관우,
-                        김현준, 박아진, 박강호, 최지민 <br /><br />
+                        김현준, 김혜윤, 박아진, 박강호, 최지민 <br /><br />
                         경기도 안산시 상록구 한양대학로 55 복지관 425호<br />
                         hycora369@gmail.com
                     </p>
