Update on Design-16

--- a/notice-detail.html
+++ b/notice-detail.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>공지 상세 - HY-CoRA</title>
-        <link rel="stylesheet" href="style.css" />
+        <title>HY-CoRA - 모집 상세</title>
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
         />
+        <link rel="stylesheet" href="style.css" />
         <link
             href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
             rel="stylesheet"
@@ -29,162 +29,56 @@
             </div>
         </header>
 
-        <main class="container" style="padding-top: 28px; padding-bottom: 60px">
-            <!-- 상단 헤더 -->
-            <div class="about-header" style="margin-bottom: 22px">
+        <main>
+            <div class="about-header">
                 <h2 class="about-title">공지 상세</h2>
-                <p class="about-subtitle">행사 세부 정보를 확인하세요.</p>
+                <p class="about-subtitle">공지 세부사항을 확인하세요.</p>
             </div>
 
-            <!-- 상세 카드: 기존 event-card 스타일을 재사용 -->
-            <section id="detail-root" class="event-card" aria-live="polite">
-                <!-- JS가 내용 주입 -->
-            </section>
-
-            <!-- 라이트박스 (이미지 크게 보기) -->
-            <div id="evimg" class="lightbox">
-                <a href="#" class="lightbox-close" aria-label="닫기">×</a>
-                <div class="lightbox-content">
-                    <div class="lightbox-placeholder">
-                        이미지 자리 (원본 준비 시 교체)
-                    </div>
+            <section class="notices-section">
+                <div class="container">
+                    <!-- JS가 notice를 주입 -->
                 </div>
-            </div>
+            </section>
         </main>
 
         <footer class="footer">
             <div class="container footer-content">
-                <p>
-                    경기도 안산시 상록구 한양대학로 55 복지관 425호 (동방
-                    주소)<br />hycora369@gmail.com
-                </p>
-                <p>
-                    &nbsp;&nbsp;&nbsp;회장: 010-3552-2044<br />부회장:
-                    010-3410-4697
-                </p>
+                <div class="footer-top">
+                    <p>Copyright 2025. HY-CoRA All rights reserved.</p>
+                    <a
+                        href="https://www.instagram.com/hycora_hanyang/"
+                        target="_blank"
+                        rel="noopener"
+                        class="social-icon"
+                    >
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
+                <div class="footer-divider" aria-hidden="true"></div>
+                <div class="footer-bottom">
+                    <p class="footer-detail">
+                        <strong>Made by HY-CoRA</strong> <br />
+                        2025 ver. Create by <strong>팀</strong> 이한, 최관우,
+                        김현준, 김혜윤, 박아진, 박강호, 최지민 <br /><br />
+                        경기도 안산시 상록구 한양대학로 55 복지관 425호<br />
+                        hycora369@gmail.com
+                    </p>
+                    <div class="contacts">
+                        <div class="contact-block">
+                            <h3>회장</h3>
+                            <p>이한 010-3552-2044</p>
+                        </div>
+                        <div class="contact-block">
+                            <h3>부회장</h3>
+                            <p>최관우 010-3410-4697</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </footer>
 
-        <script>
-            // 상세 데이터 (announcement.js의 event id와 일치)
-            const EVENT_DETAILS = {
-                "gm-2025h2": {
-                    title: "2025 하반기 정기 총회 안내",
-                    time: "시간 추후 공지",
-                    date: "2025.08.20",
-                    place: "동방/학내 강의실",
-                    content:
-                        "정기 총회 관련 상세 안내입니다. 안건 공유, 회계 보고, 향후 일정 논의 등이 포함됩니다.",
-                    images: [],
-                },
-                "freshman-ot-2025": {
-                    title: "신입생 OT 및 동아리 설명회 개최",
-                    time: "18:00-20:00",
-                    date: "2025.08.18",
-                    place: "동방/강의실",
-                    content:
-                        "신입생 대상 동아리 OT 및 설명회입니다. 활동 소개, 질의응답, 가입 절차 안내를 진행합니다.",
-                    images: [],
-                },
-                "night-food-2025-08-15": {
-                    title: "야식사업",
-                    time: "20:00-22:00",
-                    date: "2025.08.15",
-                    place: "동방",
-                    content:
-                        "동방에서 진행하는 야식 사업 공지입니다. 메뉴/가격/수익 사용처 등 세부 내용을 안내합니다.",
-                    images: [],
-                },
-            };
-
-            function getIdFromQuery() {
-                const p = new URLSearchParams(location.search);
-                return p.get("id");
-            }
-
-            function escapeHTML(s = "") {
-                return s
-                    .replaceAll("&", "&amp;")
-                    .replaceAll("<", "&lt;")
-                    .replaceAll(">", "&gt;")
-                    .replaceAll('"', "&quot;")
-                    .replaceAll("'", "&#39;");
-            }
-
-            function renderDetail() {
-                const id = getIdFromQuery();
-                const data = EVENT_DETAILS[id];
-
-                const root = document.getElementById("detail-root");
-
-                if (!data) {
-                    root.innerHTML = `
-          <div class="event-title">항목을 찾을 수 없습니다</div>
-          <div style="padding:16px 18px">잘못된 접근이거나 삭제된 공지입니다.</div>
-          <div style="padding:0 18px 14px"><a href="announcement.html" class="pill">공지 목록으로</a></div>
-        `;
-                    return;
-                }
-
-                // event-card 마크업 (목록 페이지와 동일 톤)
-                root.innerHTML = `
-        <div class="event-title">${escapeHTML(data.title)}</div>
-
-        <a href="#evimg" class="event-photo">
-          <div class="photo-inner">
-            <div class="photo-text">
-              행사 사진<br/>
-              <small>(이미지를 클릭하면 크게 볼 수 있습니다)</small>
-            </div>
-          </div>
-        </a>
-
-        <div class="event-pills">
-          <div class="pill">
-            <svg viewBox="0 0 24 24" width="22" height="22" aria-hidden="true">
-              <path fill="currentColor" d="M7 2h2v2h6V2h2v2h3a1 1 0 0 1 1 1v15a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a1 1 0 0 1 1-1h3V2Zm12 6H5v12h14V8Z"/>
-            </svg>
-            <div class="pill-text">${escapeHTML(data.time)}</div>
-          </div>
-
-          <div class="pill">
-            <svg viewBox="0 0 24 24" width="22" height="22" aria-hidden="true">
-              <path fill="currentColor" d="M12 2a10 10 0 1 1 0 20a10 10 0 0 1 0-20Zm1 5h-2v6l5 3l1-1.73l-4-2.27V7Z"/>
-            </svg>
-            <div class="pill-text">${escapeHTML(data.date)}</div>
-          </div>
-
-          <div class="pill">
-            <svg viewBox="0 0 24 24" width="22" height="22" aria-hidden="true">
-              <path fill="currentColor" d="M12 2a7 7 0 0 1 7 7c0 5.25-7 13-7 13S5 14.25 5 9a7 7 0 0 1 7-7Zm0 9.5A2.5 2.5 0 1 0 12 6a2.5 2.5 0 0 0 0 5.5Z"/>
-            </svg>
-            <div class="pill-text">${escapeHTML(data.place)}</div>
-          </div>
-        </div>
-
-        ${
-            data.content
-                ? `<div style="padding:12px 16px;white-space:pre-wrap;line-height:1.6">${escapeHTML(
-                      data.content
-                  )}</div>`
-                : ""
-        }
-      `;
-
-                // 라이트박스 이미지 교체
-                const lb = document.querySelector(".lightbox-content");
-                if (lb) {
-                    if (Array.isArray(data.images) && data.images.length > 0) {
-                        lb.innerHTML = `<img src="${
-                            data.images[0]
-                        }" alt="${escapeHTML(
-                            data.title
-                        )}" style="max-width:100%;height:auto;border-radius:10px">`;
-                    } // 없으면 기본 플레이스홀더 유지
-                }
-            }
-
-            document.addEventListener("DOMContentLoaded", renderDetail);
-        </script>
+        <!-- 상세 스크립트 -->
+        <script src="js/notice-detail.js"></script>
     </body>
 </html>
