--- a/announcement_detail.html
+++ b/announcement_detail.html
@@ -82,5 +82,6 @@
 
         <!-- 상세 스크립트 -->
         <script src="js/announcement_detail.js"></script>
+        <script src="js/nav.js"></script>
     </body>
 </html>
