--- a/announcement.html
+++ b/announcement.html
@@ -57,6 +57,9 @@
                         </thead>
                         <tbody></tbody>
                     </table>
+
+                    <!-- ✅ 이게 반드시 있어야 버튼이 보임 -->
+                    <div id="pagination" class="pagination"></div>
                 </div>
             </section>
         </main>
@@ -99,5 +102,6 @@
 
         <!-- 목록 스크립트 -->
         <script src="js/announcement.js"></script>
+        <script src="js/nav.js"></script>
     </body>
 </html>
