--- a/activities.html
+++ b/activities.html
@@ -170,5 +170,6 @@
         </footer>
 
         <script src="js/activies.js"></script>
+        <script src="js/nav.js"></script>
     </body>
 </html>
